devops/kubernetes/sos-endpoint/ingress/sos-endpoint-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sos-localhost
spec:
  rules:
    - host: sos.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sos-ep-svc
                port:
                  number: 8080
  ingressClassName: nginx
