devops/kubernetes/sos-endpoint/ingress/sos-endpoint-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: sos-endpoint-ingress
spec:
  rules:
    - host: sos.localdev.me
      http:
        paths:
          - backend:
              service:
                name: sos-ep-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
